# arcade_game

./: pyproject.toml
doc/: arcade_game.mono
src/arcade_game/: game.py  images.pyxres  spaceship.py
